# hyperbolic

./: LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
demo/: api_demo.py  demo.py  test_w.py  viz_forest.py
docs/: Aggregation.md  Attention.md  Evaluation.md  FeatureModulatedTangentAggregation.md  Implementation_Walkthrough.md  Initializing.md  JAXbackend.md  Lorentz.md  Mapping.md  MarkovBlanket.md  MockedData.md  Motivation.md  NegSampling.md  Optimization.md  README.md  Scaling.md  Training.md  YAML_Interface.md
hyperbolic/: api.py  data.py  evaluate.py  loss.py  math.py  nn.py  optim.py  train.py  viz.py
hyperbolic/interfaces/: __init__.py  yaml_graph.py
test-project/: README.md  pyproject.toml
tests/: plot_graph.py  test_integration.py  test_math.py  test_nn.py  test_rank_collapse.py  test_yaml_graph.py
tests/data/: test_file.yaml  test_generic_tree.yaml
