[project]
name = "hyperbolic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adjusttext>=1.3.0",
    "jax>=0.9.0.1",
    "jaxlib>=0.9.0.1",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
