[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-project"
version = "0.1.0"
description = "My test project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "adjusttext>=1.3.0",
    "jax>=0.9.0.1",
    "jaxlib>=0.9.0.1",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.9.0",
    "mypy>=1.15.0",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
